# ctx-agent-context-stack

./: .gitignore  LICENSE  README.md  ctx.py  handoff.md  install.py  pyproject.toml  rlm.py
docs/: claude-code-ab-benchmark.md  design.md  token-memory-audit.md
memory/: .gitignore  .rules.sha256  MEMORY.md  architecture.md  bugs.md  changelog.md  decisions.md  investigations.md  operations.md  project-rules.md
memory/.obsidian/: app.json
memory/templates/: bug.md  decision.md  investigation.md  task.md
scripts/: create_benchmark_lab.py
templates/: AGENT_CONTEXT.md
templates/adapters/: AGENTS.md  CLAUDE.md
tests/: test_ctx_memory.py  test_installer.py
